--- a/pages/despre.html
+++ b/pages/despre.html
@@ -24,13 +24,13 @@
     </header>
 
     <div class="container">
-        <h1 class="centered">Liceul Teoretic "Constantin Stamati-Ciurea</h1>
+        <h1 class="centered">Liceul Teoretic „Constantin Stamati-Ciurea”</h1>
         <h2 class="centered">Consiliul Elevilor</h2>
         <div class="row">
-            <div clas="col-5 centered">
+            <div class="col-5 centered">
                 <img class="img-despre" src="../images/prag.jpg" alt="prag">
             </div>
-            <div clas="col-5 centered">
+            <div class="col-5 centered">
                 <img class="img-despre" src="../images/clasa.jpg" alt="clasa">
             </div>
         </div>
@@ -50,7 +50,7 @@
                     <td>
                         <img  height="180px" width="250px"  src="../images/stop violenta.jpg">
                     </td>
-                    <td> Clasaa a IX-a "A" </td>
+                    <td> Clasa a IX-a "A" </td>
                     <td> Februarie 2024 </td>
                 </tr>
 
@@ -60,7 +60,7 @@
                     <td>
                         <img height="180px" width="250px"  src="../images/ora publica.jpg">
                     </td>
-                    <td> Clasaa a X-a "U" </td>
+                    <td> Clasa a X-a "U" </td>
                     <td> Noiembrie 2023 </td>
                 </tr>
                 <tr>
@@ -68,7 +68,7 @@
                     <td>
                         <img height="180px" width="250px"  src="../images/voluntariat1.jpg">
                     </td>
-                    <td> Clasaa a VIII-a "B" </td>
+                    <td> Clasa a VIII-a "B" </td>
                     <td> Aprilie 2024 </td>
                 </tr>
 
@@ -77,16 +77,16 @@
                     <td>
                         <img height="180px" width="250px"  src="../images/excursii 2.jpg">
                     </td>
-                    <td> Clasaa a VIII-XII-a </td>
+                    <td> Clasa a VIII-XII-a </td>
                     <td> Iunie 2023 </td>
                 </tr>
 
                 <tr>
-                    <td>Vizile la Muzeu</td>
+                    <td>Vizite la Muzeu</td>
                     <td>
                         <img height="180px" width="250px"  src="../images/vizita la muzeu.jpg">
                     </td>
-                    <td> Clasaa a XII-a "U" </td>
+                    <td> Clasa a XII-a "U" </td>
                     <td> Octombrie 2023 </td>
                 </tr>
 
@@ -95,7 +95,7 @@
                     <td>
                         <img height="180px" width="250px"  src="../images/pace.jpg">
                     </td>
-                    <td> Clasaa a VIII-a "A" </td>
+                    <td> Clasa a VIII-a "A" </td>
                     <td> Septembrie 2023 </td>
                 </tr>
 
@@ -104,7 +104,7 @@
                     <td>
                         <img height="180px" width="250px"  src="../images/Ziua culturii.jpg">
                     </td>
-                    <td> Clasaa a IX-XI-a  </td>
+                    <td> Clasa a IX-XI-a  </td>
                     <td> Ianuarie 2024 </td>
                 </tr>
 
